# dotfiles

./: .bashrc  Brewfile  LICENSE  README.md  bootstrap.sh  install.sh
.config/: Caddyfile  starship.toml
.config/bottom/: bottom.toml
.config/ghostty/: config
.devcontainer/: devcontainer.json
did/identity/: did.json  me.json  public.key
git/: .gitconfig  .gitignore_global  download  download (1)
nvim/.config/nvim/: init.lua
templates/: biome.json  pyproject.toml
zed/: settings.json
zsh/: .zprofile  .zshenv  .zshrc  aliases.zsh  functions.zsh
